keypad driver updates

--- a/GDEW042T2.uvprojx
+++ b/GDEW042T2.uvprojx
@@ -417,6 +417,21 @@
               <FileType>1</FileType>
               <FilePath>.\font.c</FilePath>
             </File>
+            <File>
+              <FileName>dsp.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\dsp.c</FilePath>
+            </File>
+            <File>
+              <FileName>fifo.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\fifo.c</FilePath>
+            </File>
+            <File>
+              <FileName>keypad.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\keypad.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
