refactor bar structs

--- a/GDEW042T2.uvprojx
+++ b/GDEW042T2.uvprojx
@@ -452,6 +452,11 @@
               <FileType>1</FileType>
               <FilePath>..\inc\Timer0A.c</FilePath>
             </File>
+            <File>
+              <FileName>bar.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\bar.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
